@@ -39,6 +39,7 @@ typedef struct
   gchar *gtkrc_file;
   gchar *font_name;
   gchar *icontheme_name;
+  int toolbar_style;
 } rcfile_data;
 
 void usage (void);
@@ -47,3 +48,4 @@ gboolean is_installed_theme (gchar *path, gchar **rc_file, gchar *homedir);
 GList* compare_glists (GList *t1, GList *t2, GCompareFunc cmpfunc);
 void send_refresh_signal(void);
 void dump_rcfile(gchar *path, rcfile_data *data);
+gint install_icons_tarball(const gchar *file);
